--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .section {
-    @apply flex flex-col gap-4 shadow-md rounded-md p-4;
+    @apply flex flex-col gap-4 p-4;
 
     h1 {
         @apply font-bold text-2xl;
@@ -35,5 +35,18 @@
 
     .personal-info {
         @apply grid grid-cols-3 gap-4;
+    }
+}
+
+.accordion {
+    @apply mb-4 border border-gray-300 rounded-lg;
+
+    .title {
+        @apply text-xl font-bold;
+    }
+
+    button {
+        @apply w-full flex justify-between items-center px-4 py-2 bg-gray-200
+        text-gray-800 font-bold;
     }
 }
