--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,12 @@
 }
 
 .personal-view {
-    @apply flex flex-col gap-4 text-center;
+    @apply flex flex-col gap-4 text-center bg-gradient-to-r
+    from-red-200 to-red-400 text-lg rounded-sm py-8;
+
+    h1 {
+        @apply text-3xl text-white font-bold;
+    }
 
     .personal-info {
         @apply grid grid-cols-3 gap-4;
@@ -52,11 +57,11 @@
 }
 
 .edu-view {
-    @apply flex flex-col gap-4 p-4 mt-8;
+    @apply flex flex-col gap-4 p-4;
 }
 
 .edu-info {
-    @apply flex gap-6;
+    @apply flex gap-6 text-lg;
 
     .date {
         @apply flex gap-2;
@@ -69,4 +74,13 @@
     p {
         @apply py-1;
     }
+
+    .school {
+        @apply font-semibold;
+    }
+}
+
+.heading {
+    @apply text-center p-2 mt-4 text-xl font-semibold bg-gradient-to-r
+    from-gray-100 to-gray-400;
 }
