--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,12 @@
 }
 
 .btn {
-    @apply rounded-lg px-4 py-2 transition-all
-    ease-in-out font-semibold bg-gradient-to-r from-red-100 to-red-300 w-1/2;
+    @apply rounded-lg px-4 py-2 transition-all ease-in-out
+    font-semibold bg-gradient-to-r from-red-100 to-red-300 w-1/2 mx-auto;
+
+    img {
+        @apply h-6 w-auto mx-auto;
+    }
 }
 
 .btn:hover {
